--- a/static/css/form_upload.css
+++ b/static/css/form_upload.css
@@ -17,3 +17,11 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+.bs-example{
+    margin: 20px;        
+}
+
+.btn-custom-width {
+  width: 78px !important;
+}
